// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Dropdown is in initial state has dropdown open should match snapshot 1`] = `
<div
  className="container"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <span
    className="id"
  >
    kschiffer
  </span>
  <Icon
    icon="arrow_drop_down"
    large={false}
    nudgeDown={false}
    nudgeUp={false}
    small={false}
  />
  <Dropdown
    className="dropdown"
    larger={false}
    onItemsClick={[Function]}
  >
    <DropdownItem
      exact={false}
      icon="settings"
      link="/profile-settings"
      title="Profile Settings"
    />
    <DropdownItem
      action={[Function]}
      exact={false}
      icon="power_settings_new"
      title="Logout"
    />
  </Dropdown>
</div>
`;

exports[`Profile Dropdown is in initial state should match snapshot 1`] = `
<div
  className="container"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex="0"
>
  <span
    className="id"
  >
    kschiffer
  </span>
  <Icon
    icon="arrow_drop_down"
    large={false}
    nudgeDown={false}
    nudgeUp={false}
    small={false}
  />
</div>
`;
